inoa-test/src/test/k3s/dev/observability/kubernetesui/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-dashboard
spec:
  rules:
    - host: dashboard.${k3s.ip}.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard-dashboard
                port:
                  name: http
